--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "nipplejs": "^0.10.2",
     "three": "^0.160.0"
   },
   "devDependencies": {
     "vite": "^5.0.0"
   }
 }
-
