Improved memory usage

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "nipplejs": "^0.10.2",
+    "stats.js": "^0.17.0",
     "three": "^0.160.0"
   },
   "devDependencies": {
